# Lumen

./: .gitignore  LICENSE  README.md  commit-template.txt  package-lock.json  package.json
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Editor.vue  FileManager.vue  Outline.vue
