[package]
name = "lumen"
version = "0.1.0"
description = "一个优雅的 Markdown 编辑器"
authors = ["Ecluna"]
license = "MIT"
repository = "https://github.com/Ecluna/lumen"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-start-dragging", "global-shortcut-all", "global-shortcut", "notification-all", "path-all", "dialog-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

